--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(20px, 2vw, 36px);
+  font-size: clamp(20px, 3vw, 36px);
 }
 h3 {
   font-size: clamp(18px, 3vw, 24px);
@@ -59,7 +59,7 @@ h1 {
 h2,
 h3 {
   color: var(--yinmn-blue);
-  padding: 20px;
+  padding: 5px 20px;
   /* padding-bottom: 0; */
 }
 
@@ -95,8 +95,13 @@ nav {
 }
 
 .logo {
-  height: 8vh;
+  height: 10vh;
   /* padding: 5px; */
+}
+
+.logo-container{
+  display: flex;
+  align-items: center;
 }
 
 /* .logo:hover {
@@ -180,16 +185,21 @@ button.menutoggle {
 }
 
 .menutoggle {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between; */
   cursor: pointer;
   padding: 20px;
+  animation: fadeIn 3s ease-in-out;
+
+  
 }
 
 .menutoggle i {
   color: var(--snow);
   font-size: 36px;
+  animation: fadeIn 0.3s ease-in-out;
+  
 }
 
 .menutoggle .fa-solid.fa-x {
@@ -243,9 +253,15 @@ button.menutoggle {
   text-decoration: none;
 }
 
-.one.animation {
+.one {
     opacity: 1;
   animation: slideInFromRight 0.5s ease-in-out;
+}
+
+.two {
+  opacity: 1;
+  animation: slideInFromLeft 0.5s ease-in-out;
+
 }
 
 
@@ -266,6 +282,21 @@ section.two.dimos.visible {
 .image.visible{
   opacity: 1;
 }
+
+section.three {
+  opacity: 0;
+  transition: opacity 0.7s ease-in;
+}
+
+section.three.visible{
+  opacity: 1;
+}
+
+/* shadow                                                                      */
+/* section.three {
+  box-shadow: inset 5px 5px 10px 0px var(--cornflower-blue),
+  5px 5px 10px 0px var(--cornflower-blue);
+} */
 
 /* CSS keyframes for slideInFromLeft animation */
 @keyframes slideInFromLeft {
@@ -307,23 +338,23 @@ section.two.dimos.visible {
 }
 
 .socials a:nth-child(1) {
-  animation-delay: 0.5s;
+  animation-delay: 0.3s;
 }
 
 .socials a:nth-child(2) {
-  animation-delay: 1s;
+  animation-delay: 0.6s;
 }
 
 .socials a:nth-child(3) {
-  animation-delay: 1.5s;
+  animation-delay: 0.9s;
 }
 
 .socials a:nth-child(4) {
-  animation-delay: 2s;
+  animation-delay: 1.2s;
 }
 
 .socials a:nth-child(5) {
-  animation-delay: 2.5s;
+  animation-delay: 1.5s;
 }
 @keyframes slideInFromBottom {
   0% {
@@ -500,14 +531,13 @@ section.one {
   
   section.three {
     min-height: auto;
-  
+    
     /* min-height: 100%;
       overflow-y: auto; */
     /* background-color: var(--platinum); */
-    background-color: var(--snow);
+    /* background-color: var(--snow); */
   }
   
-
 section.one h1,
 section.one p {
   padding: 0px 10px;
@@ -518,20 +548,24 @@ section.one p {
   color: var(--platinum);
 }
 
-/* section.two.about img {
+section.two.about img {
   width: 100%;
   position: relative;
   top: 10px;
-} */
+  border-radius: 60%;
+}
 
 section.three {
   padding: 15px;
   /* width: 100vw; */
 }
 
+section.three h2, h3 {
+  color: var(--orange);
+}
 section.three p {
-  color: var(--yinmn-blue);
-  padding: 0 20px;
+  color: var(--snow);
+  padding: 10px 20px;
 }
 
 /* section.three h2, h3, p {
@@ -577,12 +611,12 @@ display: flex;
 
 .section-image {
   /* background-color: var(--cornflower-blue); */
-  background-color: var(--yinmn-blue);
+  /* background-color: var(--yinmn-blue); */
   display: flex;
   padding: 20px;
 
   /* margin: 20px; */
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 
 
@@ -590,7 +624,7 @@ display: flex;
   /* width: 100vw; */
   width: 100%;
   /* height: 60vh; */
-  min-height: 30vh;
+  /* min-height: 30vh; */
   max-height: 80vh;
   object-fit: cover;
   position: relative;
@@ -673,7 +707,7 @@ display: flex;
 }
 
 .form label {
-  color: var(--yinmn-blue);
+  color: var(--orange);
   font-weight: bold;
 }
 
@@ -692,8 +726,9 @@ textarea {
 }
 
 .submit-btn {
-  background-color: var(--yinmn-blue);
-  color: var(--platinum);
+  background-color: var(--orange);
+  color: var(--yinmn-blue);
+  font-weight: bold;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -701,25 +736,37 @@ textarea {
 }
 
 .submit-btn:hover {
-  background-color: var(--orange);
-  color: var(--yinmn-blue);
+  background-color: var(--snow);
+  /* color: var(--yinmn-blue); */
   transition: color 0.4s ease-in;
+  /* animation: shake 0.5s;
+  animation-iteration-count: infinite; */
+}
+
+.submit-btn:hover i {
+  color: var(--orange);
 }
 
 @media screen and (min-width: 1024px) {
-  section.three {
+  /* section.three {
     padding: 0 30px;
-  }
+  } */
 
   .form {
-    max-width: 40%; 
+    max-width: 80%; 
+  }
 
+  section.three {
+    padding: 100px;
+    /* border-radius: 10px;
+    box-shadow: 5px 5px 0px 5px var(--cornflower-blue); */
   }
 }
 
 @media screen and (min-width: 1280px) {
   
   section.three{
-    width: 53vw
+    width: 60vw
   }
+
 }
