--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,6 @@
   --platinum: #ede7e9;
   --orange: #ff9300;
   --snow: #FFFAFA;
-  --ghost-white: #F8F8FF;
 }
 
 h1 {
@@ -23,6 +22,8 @@ h3 {
 p,
 ul {
   font-size: clamp(18px, 1vw, 20px);
+    /* font-family: FuturaPTExtraBold-Reg, sans-serif; */
+  
 }
 
 body {
@@ -71,6 +72,27 @@ body {
   margin: 0;
   flex-direction: column;
 }
+
+
+/* unvisited link */
+a:link {
+  color: var(--platinum);
+}
+
+/* visited link */
+a:visited {
+  color: var(--orange);
+}
+
+/* mouse over link */
+a:hover {
+  color: var(--snow);
+}
+
+/* selected link */
+a:active {
+  color: var(--snow);
+} 
 
 #home {
     background-image: url('/assets/images/background.webp');
@@ -136,7 +158,7 @@ header {
   transition: 0.5s;
 }
 
-.hambuger-navigation {
+.hamburger-navigation {
   display: none;
 }
 
@@ -151,30 +173,33 @@ header {
   list-style-type: none;
 } */
 
-.hambuger-navigation a {
+.hamburger-navigation a {
   text-decoration: none;
 }
 
-.hambuger-navigation a:link {
+.hamburger-navigation a:link {
   color: var(--yinmn-blue);
 }
 
-.hambuger-navigation a:visited {
+.hamburger-navigation a:visited {
   color: var(--yinmn-blue);
 }
 
-.hambuger-navigation a:hover,
-.hambuger-navigation a:focus {
+.hamburger-navigation a:hover,
+.hamburger-navigation a:focus {
   color: var(--platinum);
-  border-bottom: 2px solid var(--yinmn-blue);
-  transition: border-bottom 0.4s ease-in;
+  border-bottom: 2px solid var(--orange);
+  border-top: 2px solid var(--orange);
+
+  /* transition: border-bottom 0.1s ease-in; */
+  
 }
 
-.hambuger-navigation a:active {
+.hamburger-navigation a:active {
   color: var(--platinum);
 }
 
-.hambuger-navigation .current {
+.hamburger-navigation .current {
   border-bottom: 2px solid var(--yinmn-blue);
 }
 
@@ -220,7 +245,7 @@ button.menutoggle {
   color: var(--yinmn-blue);
 }
 
-.hambuger-navigation.open {
+.hamburger-navigation.open {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -243,11 +268,16 @@ button.menutoggle {
   }
 }
 
-.hambuger-navigation.open li {
-  margin-bottom: 10px;
+.hamburger-navigation.open li {
+  margin: 10px;
+  font-weight:500;
 }
 
-.hambuger-navigation.open a {
+/* .hamburger-navigation.open li:last-child {
+  margin-bottom: 0px;
+} */
+
+.hamburger-navigation.open a {
   color: var(--yinmn-blue);
   font-size: 18px;
   text-decoration: none;
@@ -386,7 +416,7 @@ section.three.visible{
 }
 
 .nav-item a:hover {
-  font-size: 4.1rem;
+  /* font-size: 4.1rem; */
   color: var(--orange);
   padding-left: 10px;
   transition: padding-left 0.1s ease-in;
@@ -528,6 +558,10 @@ section.one {
     flex-direction: column;
     justify-content: center;
   }
+
+  section.one.contact {
+    height: 60vh;
+  }
   
   section.three {
     min-height: auto;
@@ -557,6 +591,7 @@ section.two.about img {
 
 section.three {
   padding: 15px;
+  padding-bottom: 100px;
   /* width: 100vw; */
 }
 
@@ -625,7 +660,7 @@ display: flex;
   width: 100%;
   /* height: 60vh; */
   /* min-height: 30vh; */
-  max-height: 80vh;
+  /* max-height: 80vh; */
   object-fit: cover;
   position: relative;
   border-radius: 30px;
@@ -756,11 +791,20 @@ textarea {
     max-width: 80%; 
   }
 
+  section.one.contact {
+    align-items: center;
+  }
+
   section.three {
     padding: 100px;
     /* border-radius: 10px;
     box-shadow: 5px 5px 0px 5px var(--cornflower-blue); */
   }
+
+  .socials i {
+    font-size: 100px;
+  }
+
 }
 
 @media screen and (min-width: 1280px) {
