--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,10 +14,10 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(20px, 3vw, 36px);
+  font-size: clamp(24px, 3vw, 36px);
 }
 h3 {
-  font-size: clamp(18px, 3vw, 24px);
+  font-size: clamp(22px, 3vw, 24px);
 }
 p,
 ul {
@@ -33,7 +33,7 @@ body {
 
 }
 
-html,
+/* html, */
 body {
   /* overflow-x: hidden; */
   background-color: var(--yinmn-blue);
@@ -73,10 +73,10 @@ body {
   flex-direction: column;
 }
 
-
 /* unvisited link */
 a:link {
   color: var(--platinum);
+  text-decoration: none;
 }
 
 /* visited link */
@@ -94,6 +94,22 @@ a:active {
   color: var(--snow);
 } 
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  height: 10vh;
+  /* padding: 5px; */
+}
+
+.logo-container{
+  display: flex;
+  align-items: center;
+}
+
+/* HOME */
 #home {
     background-image: url('/assets/images/background.webp');
     background-size: cover;
@@ -110,20 +126,27 @@ ul {
   list-style-type: none;
 }
 
-/*  */
-nav {
-  display: flex;
-  justify-content: space-between;
+
+.show-menu button {
+  animation: jumpAnimation 1s infinite; /* 1s duration, infinite repetition */
+  background: none;
+  color: var(--platinum); /* Optional text color for the button */
+  border: none; /* Optional border for the button */
+  padding: 10px 20px; /* Optional padding for the button */
+  /* border-radius: 5px; */
 }
 
-.logo {
-  height: 10vh;
-  /* padding: 5px; */
-}
-
-.logo-container{
-  display: flex;
-  align-items: center;
+/* Jumping animation using keyframes */
+@keyframes jumpAnimation {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(
+      -10px
+    ); /* Adjust this value to control the jump height */
+  }
 }
 
 /* .logo:hover {
@@ -131,7 +154,6 @@ nav {
   transition: transform 0.3s ease-in-out; 
 } */
 
-/* Keep the same CSS for .nav-item as before */
 .nav-item {
   color: var(--platinum);
   font-size: 4rem;
@@ -141,13 +163,34 @@ nav {
     transition: opacity 0.3s ease-in-out; */
 }
 
-/* New class for the initial animation effect */
 .nav-item.animation-initial {
   opacity: 1;
   animation: slideInFromLeft 0.5s ease-in-out;
 }
+.nav-item a {
+  color: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+}
 
-/* Navigation */
+.nav-item a:hover {
+  /* font-size: 4.1rem; */
+  color: var(--orange);
+  padding-left: 10px;
+  transition: padding-left 0.1s ease-in;
+}
+/* 
+.comma {
+  color: var(--cornflower-blue);
+} */
+
+.nav-item.one {
+  color: var(--orange);
+}
+
+/* NAVIGATION MENU*/
+
 header {
   position: fixed;
   top: 0;
@@ -172,6 +215,17 @@ header {
   font-weight: bold;
   list-style-type: none;
 } */
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 4px; 
+  background-color: var(--orange); 
+  z-index: 1000;
+  transition: width 0.3s ease;
+}
 
 .hamburger-navigation a {
   text-decoration: none;
@@ -204,6 +258,7 @@ header {
 }
 
 /* HAMBURGER MENU STYLING */
+
 button.menutoggle {
   background: none;
   border: none;
@@ -284,7 +339,7 @@ button.menutoggle {
 }
 
 .one {
-    opacity: 1;
+  opacity: 1;
   animation: slideInFromRight 0.5s ease-in-out;
 }
 
@@ -294,41 +349,6 @@ button.menutoggle {
 
 }
 
-
-/* section.two.dimos {
-  opacity: 0;
-  transition: opacity 1s ease-in;
-}
-
-section.two.dimos.visible {
-  opacity: 1;
-} */
-
-.image {
-  opacity: 0;
-  transition: opacity 1s ease-in;
-}
-
-.image.visible{
-  opacity: 1;
-}
-
-section.three {
-  opacity: 0;
-  transition: opacity 0.7s ease-in;
-}
-
-section.three.visible{
-  opacity: 1;
-}
-
-/* shadow                                                                      */
-/* section.three {
-  box-shadow: inset 5px 5px 10px 0px var(--cornflower-blue),
-  5px 5px 10px 0px var(--cornflower-blue);
-} */
-
-/* CSS keyframes for slideInFromLeft animation */
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -347,45 +367,25 @@ section.three.visible{
   }
 }
 
+.image {
+  opacity: 0;
+  transition: opacity 1s ease-in;
+}
+
+.image.visible{
+  opacity: 1;
+}
+
 /* New class for the bottom animation effect */
 .nav-item.animation {
   opacity: 1;
   animation: slideInFromBottom 0.5s ease-in-out;
 }
 
-/* .logo {
-  opacity: 1;
-  animation: slideInFromLeft 0.5s ease-in-out;
-} */
-
 .logo{
   animation: slideInFromBottomAndFade 1s ease-in-out forwards;
 }
 
-.socials a {
-  animation: slideInFromBottomAndFade 1s ease-in-out forwards;
-  opacity: 0;
-}
-
-.socials a:nth-child(1) {
-  animation-delay: 0.3s;
-}
-
-.socials a:nth-child(2) {
-  animation-delay: 0.6s;
-}
-
-.socials a:nth-child(3) {
-  animation-delay: 0.9s;
-}
-
-.socials a:nth-child(4) {
-  animation-delay: 1.2s;
-}
-
-.socials a:nth-child(5) {
-  animation-delay: 1.5s;
-}
 @keyframes slideInFromBottom {
   0% {
     transform: translateY(100%);
@@ -396,49 +396,90 @@ section.three.visible{
 }
 
 
-
-@keyframes slideInFromBottomAndFade {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.nav-item a {
-  color: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  line-height: inherit;
-}
-
-.nav-item a:hover {
-  /* font-size: 4.1rem; */
-  color: var(--orange);
-  padding-left: 10px;
-  transition: padding-left 0.1s ease-in;
-}
-
-.comma {
-  color: var(--cornflower-blue);
-}
-
-.nav-item.one {
-  color: var(--orange);
-}
-
 /* .nav-item.two a {
     font-size: 50px;
 } */
 
 /* .nav-item.two.animation, */
-.nav-item.case-studies {
-  line-height: 1;
+
+/* SECTIONS */
+section.one {
+  min-height: 100%;
+  height: 100vh;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
+section.three {
+  min-height: auto;
+  
+  /* min-height: 100%;
+    overflow-y: auto; */
+  /* background-color: var(--platinum); */
+  /* background-color: var(--snow); */
+}
+
+section.one h1,
+section.one p {
+padding: 0px 10px;
+}
+
+section.one p {
+font-size: 24px;
+color: var(--platinum);
+}
+
+section.three {
+  opacity: 0;
+  padding: 15px;
+  padding-bottom: 100px;    
+/* width: 100vw; */
+
+  transition: opacity 0.7s ease-in;
+}
+
+section.three.visible{
+  opacity: 1;
+}
+
+
+section.three h2, h3 {
+color: var(--orange);
+}
+section.three p {
+color: var(--snow);
+padding: 10px 20px;
+}
+.section-image {
+  /* background-color: var(--cornflower-blue); */
+  /* background-color: var(--yinmn-blue); */
+  display: flex;
+  padding: 20px;
+
+  /* margin: 20px; */
+  /* border-radius: 20px; */
+}
+
+
+.section-image img{
+  /* width: 100vw; */
+  width: 100%;
+  /* height: 60vh; */
+  /* min-height: 30vh; */
+  /* max-height: 80vh; */
+  object-fit: cover;
+  position: relative;
+  border-radius: 30px;
+  /* right: 50px; */
+}
+
+
+/* WORKS */
+.nav-item.works {
+  line-height: 1;
+}
 
 .navigation a {
   text-decoration: none;
@@ -466,27 +507,23 @@ section.three.visible{
   padding: 30px;
 }
 
-/* Jumping animation using keyframes */
-@keyframes jumpAnimation {
-  0%,
-  100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(
-      -10px
-    ); /* Adjust this value to control the jump height */
-  }
+.main-content.works a {
+  color: var(--platinum);
 }
 
-.show-menu button {
-  animation: jumpAnimation 1s infinite; /* 1s duration, infinite repetition */
-  background: none;
-  color: var(--platinum); /* Optional text color for the button */
-  border: none; /* Optional border for the button */
-  padding: 10px 20px; /* Optional padding for the button */
-  /* border-radius: 5px; */
+.main-content.works a:hover,
+.main-content.works a:focus {
+  color: var(--orange);
 }
+
+.subtitle {
+  padding-top: 10px;
+  padding-bottom: 30px;
+  padding-left: 4px;
+  padding-right: 4px;
+  color: var(--orange);
+}
+
 
 /* .image img {
     height: 100%;
@@ -503,41 +540,17 @@ section.three.visible{
 
 /* ABOUT */
 
-/* .go-back {
-  position: fixed;
-  top: 20px;
-  left: 80%;
-  transform: translateX(-50%);
-  cursor: pointer;
-  padding: 20px;
-  background: none;
-  border: none;
-  color: var(--platinum);
-  text-decoration: none;
-  font-size: 40px;
-  z-index: 1;
-} */
-
-/* .go-back {
-  color: var(--platinum);
-  text-decoration: none;
-  font-size: 40px;
-} */
-
-/* .dots {
-  color: var(--cornflower-blue);
-  font-size: 32px;
-}
-
-.slash {
-  color: var(--orange);
-  font-size: 32px;
-} */
-
-.main-content.about, .main-content.dimos{
+.main-content.about, .main-content.works-content{
   display: flex;
   flex-direction: column;
   height: 100vh;
+}
+
+section.two.about img {
+  width: 100%;
+  position: relative;
+  top: 10px;
+  border-radius: 60%;
 }
 
 /* .main-content.about h2, h3, .main-content.contact h2, h3  {
@@ -550,92 +563,26 @@ section.three.visible{
   height: 100vh;
   min-height: 100%;
 } */
-section.one {
-    min-height: 100%;
-    height: 100vh;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
 
-  section.one.contact {
-    height: 60vh;
-  }
-  
-  section.three {
-    min-height: auto;
-    
-    /* min-height: 100%;
-      overflow-y: auto; */
-    /* background-color: var(--platinum); */
-    /* background-color: var(--snow); */
-  }
-  
-section.one h1,
-section.one p {
-  padding: 0px 10px;
-}
 
-section.one p {
-  font-size: 24px;
-  color: var(--platinum);
-}
-
-section.two.about img {
-  width: 100%;
-  position: relative;
-  top: 10px;
-  border-radius: 60%;
-}
-
-section.three {
-  padding: 15px;
-  padding-bottom: 100px;
-  /* width: 100vw; */
-}
-
-section.three h2, h3 {
-  color: var(--orange);
-}
-section.three p {
-  color: var(--snow);
-  padding: 10px 20px;
-}
 
 /* section.three h2, h3, p {
     padding: 0 30px;
 } */
 
 
-/* CASE STUDIES */
 
-.main-content.case-studies a {
-  color: var(--platinum);
-}
 
-.main-content.case-studies a:hover,
-.main-content.case-studies a:focus {
-  color: var(--orange);
-}
+/* DIMOS & BUTTERFLY */
 
-.subtitle {
-  padding-top: 10px;
-  padding-bottom: 30px;
-  padding-left: 4px;
-  padding-right: 4px;
-  color: var(--orange);
-}
-/* DIMOS */
-
-section.two.dimos {
+section.two.works-content {
   /* width: 100vw;
 height: 96vh;
 overflow: hidden; */
 display: flex;
 }
 
-.two.dimos img {
+.two.works-content img {
   width: 100vw;
   /* height: 60vh; */
   height: 80vh;
@@ -645,27 +592,45 @@ display: flex;
 }
 
 .section-image {
-  /* background-color: var(--cornflower-blue); */
-  /* background-color: var(--yinmn-blue); */
-  display: flex;
-  padding: 20px;
-
-  /* margin: 20px; */
-  /* border-radius: 20px; */
-}
-
-
-.section-image img{
-  /* width: 100vw; */
-  width: 100%;
-  /* height: 60vh; */
-  /* min-height: 30vh; */
-  /* max-height: 80vh; */
-  object-fit: cover;
   position: relative;
-  border-radius: 30px;
-  /* right: 50px; */
+  /* width: 100%; */
 }
+
+.image {
+  display: block;
+  /* width: 100%; */
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: var(--cornflower-blue);
+}
+
+.section-image:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: var(--snow);
+  font-size: 26px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 /* .two.dimos img {
   width: 100vw;
   position: relative;
@@ -673,6 +638,18 @@ display: flex;
   top: 20px;
   border-radius: 10px;
 } */
+
+
+section.three ul {
+  padding: 10px 20px;
+  padding-left: 40px;
+  list-style-type: disc;
+  color: var(--snow);
+}
+
+section.three span {
+  color: var(--orange);
+}
 
 /* CONTACT */
 
@@ -699,6 +676,10 @@ display: flex;
     align-items: center;
 }
 
+section.one.contact {
+  height: 60vh;
+}
+
 .socials {
   /* padding-top: 20px; */
   display: flex;
@@ -707,7 +688,9 @@ display: flex;
 }
 .socials a {
   padding: 5px;
-  transition: transform 0.2s ease-in-out; /* Add this line for a smooth animation */
+  /* transition: transform 0.2s ease-in-out;  */
+  animation: slideInFromBottomAndFade 1s ease-in-out forwards;
+  opacity: 0;
 }
 
 .socials a:hover,
@@ -715,7 +698,7 @@ display: flex;
   color: var(--orange);
   position: relative;
   bottom: 10px;
-  transform: scale(1.2); /* Add this line to scale the icons on hover */
+  /* transform: scale(1.2);  */
 
   /* transform:scale(1.5); */
   /* transform-origin:50% 50%; */
@@ -730,6 +713,95 @@ display: flex;
   color: var(--orange);
 }
 
+.socials a:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.socials a:nth-child(2) {
+  animation-delay: 0.6s;
+}
+
+.socials a:nth-child(3) {
+  animation-delay: 0.9s;
+}
+
+.socials a:nth-child(4) {
+  animation-delay: 1.2s;
+}
+
+.socials a:nth-child(5) {
+  animation-delay: 1.5s;
+}
+
+
+section.two.contact {
+	background-image: url('/assets/images/background.webp');
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+  min-height: 80vh;
+  width: 100vw;
+  /* height: 1250px; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* padding: 1000px; */
+}
+
+section.two.contact h2, section.two.contact p {
+  display: flex;
+  align-self: center;
+  color: var(--snow);
+}
+
+/* section.two.contact img {
+  width: 50%;
+} */
+
+/* header,
+section {
+	height: 100vh;
+} */
+
+/* section.two.about {
+	display: flex;
+	text-align: center;
+	height: 100vh;
+	color: #fff;
+	justify-content: center;
+	align-item: center;
+	flex-direction: column;
+} */
+
+/* header .content h1,
+header .content h2 {
+	background-image: linear-gradient( 90deg, black, #000000b0, black);
+} */
+
+/* section.two.about {
+	font-size: large;
+	background-color: rgb(0 115 12 / 71%);
+	color: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+} */
+
+/* section.two.about {
+
+	padding: 100vw;
+} */
+
+@keyframes slideInFromBottomAndFade {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 .form {
     display: flex;
@@ -742,8 +814,12 @@ display: flex;
 }
 
 .form label {
-  color: var(--orange);
+  color: var(--snow);
   font-weight: bold;
+}
+
+.form i {
+  color: var(--orange);
 }
 
 input[type="text"],
@@ -758,10 +834,11 @@ textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+  /* background-color: var(--cornflower-blue); */
 }
 
 .submit-btn {
-  background-color: var(--orange);
+  background-color: var(--snow);
   color: var(--yinmn-blue);
   font-weight: bold;
   padding: 12px 20px;
@@ -771,7 +848,7 @@ textarea {
 }
 
 .submit-btn:hover {
-  background-color: var(--snow);
+  background-color: var(--orange);
   /* color: var(--yinmn-blue); */
   transition: color 0.4s ease-in;
   /* animation: shake 0.5s;
@@ -779,7 +856,7 @@ textarea {
 }
 
 .submit-btn:hover i {
-  color: var(--orange);
+  color: var(--snow);
 }
 
 @media screen and (min-width: 1024px) {
