--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,7 @@ body {
 
 /* unvisited link */
 a:link {
-  color: var(--platinum);
+  color: var(--orange);
   text-decoration: none;
 }
 
@@ -137,10 +137,10 @@ ul {
 }
 
 
-/* .logo:hover {
+.logo-container:hover {
   transform: scale(1.2); 
   transition: transform 0.3s ease-in-out; 
-} */
+}
 
 .nav-item {
   color: var(--platinum);
@@ -187,6 +187,8 @@ header {
   z-index: 1;
   /* align-items: center; */
   transition: 0.5s;
+  z-index: 3;
+
 }
 
 .hamburger-navigation {
@@ -243,6 +245,14 @@ header {
 
 .hamburger-navigation .current {
   border-bottom: 2px solid var(--yinmn-blue);
+}
+
+.hamburger-navigation li:nth-child(odd) {
+  animation: slideInFromLeft 0.5s ease-in-out;
+}
+
+.hamburger-navigation li:nth-child(even) {
+  animation: slideInFromRight 0.5s ease-in-out;
 }
 
 /* HAMBURGER MENU STYLING */
@@ -339,7 +349,6 @@ section.one.works-content p {
 
 section.one.contact {
   animation: fadeIn 1s ease-in-out;
-
 }
 .image {
   opacity: 0;
@@ -359,6 +368,29 @@ section.one.contact {
   animation: slideInFromBottomAndFade 1s ease-in-out forwards;
 }
 
+.menutoggle:hover i.fa-bars,
+.menutoggle:focus i.fa-bars {
+  /* animation: rotateIcon 0.3s ease-in-out forwards; */
+  animation: rotateIcon 0.3s linear forwards;
+
+}
+
+/* .menutoggle:hover i.fa-x,
+.menutoggle:focus i.fa-x {
+  animation: rotateIcon 0.3s ease-in-out forwards;
+} */
+
+@keyframes rotateIcon {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
 
 /* .nav-item.two a {
     font-size: 50px;
@@ -439,14 +471,57 @@ padding: 10px 20px;
   /* right: 50px; */
 }
 
+/* 404 & THANK-YOU*/
 
-/* WORKS */
+section.one.error {
+animation: fadeIn 0.7s ease-in-out;
+}
+
+.thank {
+  animation: jumpAnimation 1s infinite;
+} 
+
+section.one.error h1 {
+  /* text-transform: uppercase; */
+  background-image: linear-gradient(
+    -250deg,
+    var(--snow) 0%,
+    var(--cornflower-blue) 29%,
+    var(--yinmn-blue) 67%,
+    var(--orange) 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  /* color: #fff; */
+  background-clip: text;
+  /* text-fill-color: transparent; */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  /* display: inline-block; */
+  /* font-size: 90px; */
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+/* WORKS & BLOG*/
 .nav-item.works {
   line-height: 1;
 }
 
 .navigation a {
   text-decoration: none;
+}
+
+/*********************************** To use for blog items space  */
+li.nav-item.one.works, li.nav-item.two.works {
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .main-content {
@@ -456,6 +531,14 @@ padding: 10px 20px;
   /* justify-content: space-between; */
   align-items: center;
   /* overflow-x: hidden; */
+  /* margin-top: 130px; */
+}
+
+.main-content.works {
+  margin-top: 180px;
+}
+.main-content.blog {
+  margin-top: 180px;
 }
 
 .navigation {
@@ -471,18 +554,23 @@ padding: 10px 20px;
   padding: 30px;
 }
 
-.main-content.works a {
+.main-content.works a, .main-content.blog a {
   color: var(--platinum);
 }
 
 .main-content.works a:hover,
-.main-content.works a:focus {
+.main-content.works a:focus,
+.main-content.blog a:hover,
+.main-content.blog a:focus {
   color: var(--orange);
 }
 
+.main-content.blog a {
+  font-size: 40px;
+}
 .subtitle {
-  padding-top: 10px;
-  padding-bottom: 30px;
+  /* padding-top: 10px; */
+  /* padding-bottom: 30px; */
   padding-left: 4px;
   padding-right: 4px;
   color: var(--orange);
@@ -650,12 +738,15 @@ section.one.contact {
   display: flex;
   justify-content: center;
   /* align-items: baseline; */
+  z-index: 2;
+
 }
 .socials a {
   padding: 5px;
   /* transition: transform 0.2s ease-in-out;  */
   animation: slideInFromBottomAndFade 1s ease-in-out forwards;
   opacity: 0;
+
 }
 
 .socials a:hover,
@@ -698,24 +789,124 @@ section.one.contact {
   animation-delay: 1.5s;
 }
 
-section.two.contact h2, section.two.contact p {
-  z-index: 0;
-}
-
 section.two.contact {
-	background-image: url('/assets/images/background.webp');
-	background-attachment: fixed;
-	background-size: cover;
-	background-repeat: no-repeat;
-  min-height: 80vh;
+  position: relative;
+  min-height: 100vh;
   width: 100vw;
-  /* height: 1250px; */
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* padding: 1000px; */
-  position: relative; /* Add this to allow positioning of the pseudo-element */
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+
 }
+
+section.two.contact.visible{
+  opacity: 1;
+
+}
+
+section.two.contact::before,
+section.two.contact::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+}
+
+section.two.contact::before {
+  background-image: url('/assets/images/mountain.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* transform: translateZ(-1px); */
+  z-index: 1;
+}
+
+section.two.contact::after {
+  background-image: url('/assets/images/background.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* section.two.contact-content {
+  position: relative;
+  z-index: 1; 
+} */
+
+section.two.contact h2,
+section.two.contact p {
+  position: relative;
+  z-index: 2; 
+  color: var(--snow); 
+  text-align: center;
+  padding: 20px;
+}
+
+section.three.contact {
+  opacity: 1;
+}
+
+/* section.two.contact {
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+  background-image: url('/assets/images/background.webp');
+  min-height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative; 
+}
+
+section.two.contact::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  pointer-events: none; 
+  z-index: 1; 
+  background-image: url('/assets/images/mountain.webp');
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+  min-height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+} */
+
+section.two.contact h2,
+section.two.contact p {
+  color: var(--snow);
+  padding: 0;
+  z-index: 0;
+  text-align: center; 
+}
+
+/* section.two.contact {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  min-height: 80vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden; 
+  background-attachment: scroll; 
+}
+
 
 section.two.contact::before {
   content: "";
@@ -725,32 +916,29 @@ section.two.contact::before {
   width: 100%;
   height: 100%;
   background-size: cover;
-  /* opacity: 0.7; */
-  pointer-events: none; /* Allow interactions with the base image */
-  z-index: 1; /* Place the overlay image above the background image */
-
+  pointer-events: none; 
+  z-index: 1; 
   background-image: url('/assets/images/mountain.webp');
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
   min-height: 80vh;
   width: 100vw;
-  /* height: 1250px; */
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* padding: 1000px; */
-}
+}  */
 
 
 
-
-section.two.contact h2, section.two.contact p {
+/* section.two.contact h2, section.two.contact p {
   display: flex;
   align-self: center;
   color: var(--snow);
   padding: 0;
-}
+  z-index: 0;
+
+} */
 
 /* section.two.contact img {
   width: 50%;
@@ -799,6 +987,7 @@ header .content h2 {
     /* height: 100%; */
     /* max-width: 40%;  */
     padding: 10px;
+    z-index: 1;
 }
 
 .form label {
@@ -921,7 +1110,13 @@ textarea {
   /* section.three {
     padding: 0 30px;
   } */
+  
+  .nav-item.home{
+    font-size: 8rem;
+    /* line-height: 9.2rem; */
+    line-height: 10rem;
 
+  }
   .form {
     max-width: 80%; 
   }
@@ -939,6 +1134,7 @@ textarea {
   .socials i {
     font-size: 100px;
   }
+
 
 }
 
